# Fortest

./: .env.example  .gitignore  Documentation.md  README.md  pyproject.toml
analysis/: README.md
analysis/forecastbench_dataset/: README.md
analysis/forecastbench_dataset/cleaned_data/: README.md
analysis/forecastbench_dataset/questions_by_source/: acled.json  dbnomics.json  fred.json  infer.json  manifold.json  metaculus.json  polymarket.json  wikipedia.json  yfinance.json
analysis/forecastbench_dataset/raw_data/: DATASET_ANALYSIS.md
analysis/search_analysis/: README.md  search_results_asknews.json  search_results_asknews_full.json
examples/: pipeline_demo.py
scripts/: test_agent_env.py  test_search.py
src/fortest/environment/: manager.py
src/fortest/environment/search_core/: base.py  mock_search.py  real_search.py  search_analyzer.py  search_plots.py  search_test_queries.json
src/fortest/loader/: loader.py
src/fortest/loader/custom_loaders/: default.py  forecastbench.py  forecastbench_v1.py
src/fortest/metrics/: metrics.py
src/fortest/problems/: problems.json
src/fortest/problems/ForecastBenchTemplatized/: README.md  __init__.py  resolver.py
src/fortest/problems/ForecastBench_v1/: README.md  y_compose_resolved.json  y_single_resolved.json
src/fortest/scripts/: setup_datasets.py
tests/: TESTING_REPORT.md  test_benchmarking.py  test_forecastbench.py  test_forecastbench_v1_distribution.py  test_forecastbench_v1_pipeline.py  test_forecastbench_v1_unit.py  test_search_volume.py
