[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fortest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ddgs>=9.10.0",
    "parallel-web>=0.3.4",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
pythonpath = "src"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/fortest"]
